[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main/Setting.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=31]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=20]
size = 21
font_data = SubResource( 31 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0.67451 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=19]
font_path = "res://font/Asquire.otf"

[sub_resource type="DynamicFont" id=24]
size = 21
font_data = SubResource( 19 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0.67451 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.544
margin_top = -25.0
margin_right = 64.544
margin_bottom = 25.0
rect_scale = Vector2( 1.08, 1 )

[node name="Video" type="Button" parent="VBoxContainer"]
margin_right = 129.0
margin_bottom = 23.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/hover = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "VIDEO"

[node name="Audio" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 129.0
margin_bottom = 50.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/hover = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "AUDIO"

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.497
anchor_right = 0.5
anchor_bottom = 0.497
margin_left = -30.0
margin_top = 272.8
margin_right = 32.0
margin_bottom = 301.8
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "BACK"

[connection signal="pressed" from="VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
